<resources>
    <string name="app_name">Final_Project</string>
    <string name="splash_text1">انت مش انت</string>
    <string name="splash_text2">و انت جعان ⊙.☉</string>
    <string name="food_name">اسم الصنف</string>
    <string name="paying_type">نوع الدفع</string>
    <string name="price">السعر</string>
    <string name="my_app_name">مطعمنا</string>
    <string name="cash">كاش</string>
    <string name="installments">تقسيط</string>
    <string name="searh">ابحث هنا</string>
    <string name="account_name">اسم المستخدم</string>
    <string name="account_type_admin">حساب مسؤول</string>
    <string name="account_type_normal">حساب عادي</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="sitting_type">نوع الإعداد</string>
    <string name="enter_userName">أدخل اسم المستخدم</string>
    <string name="enter_password">أدخل كلمة المرور</string>
    <string name="rememberme">تذكرني</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="doyou_havnt_account">ليس لديك حساب ؟ أنشئ واحداً</string>
    <string name="enter_your_fullname">أدخل اسمك ثلاثي</string>
    <string name="enter_your_email">أدخل بريدك الإلكتروني</string>
    <string name="enter_your_username">أدخل اسم المستخدم</string>
    <string name="enter_your_repassword">أعد ادخال كلمة المرور</string>
    <string name="enter_your_passowrd">أدخل كلمة المرور</string>
    <string name="enter_your_country">أدخل اسم بلدك</string>
    <string name="enter_your_phone">"أدخل رقم الهاتف "</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string name="isAnAdministrator">هل الحساب مسؤول ؟</string>
    <string name="your_barthday">سنة الميلاد</string>
    <string name="create_account">انشاء حساب</string>
    <string name="enter_your_title">أدخل عنوانك</string>
    <string name="all_your_sales">كل عمليات الشراء الخاصة بك</string>
    <string name="total_price">50</string>
    <string name="product_detail_total_price">المجموع : </string>
    <string name="product_name">اسم الصنف</string>
    <string name="date_and_time">التاريخ و الوقت</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="enter_oldpassword">أدخل كلمة المرور القديمة</string>
    <string name="enter_newpassword">أدخل كلمة المرور الجديدة</string>
    <string name="enter_re_newpassword">أعد ادخال كلمة المرور الجديدة</string>
    <string name="are_u_sure">هل أنت متأكد هذه العملية ؟</string>
    <string name="change">تغيير</string>
    <string name="delete_all_sales">حذف كل عمليات الشراء</string>
    <string name="well_delete_all_sales">سيتم حذف كل بيانات عمليات الشراء</string>
    <string name="well_delete_all_sales2">الخاصة بك</string>
    <string name="delete">حذف</string>
    <string name="add_new_Item">إضافة صنف جديد</string>
    <string name="enter_product_description">أدخل وصف الصنف</string>
    <string name="enter_price">أدخل سعر الصنف</string>
    <string name="enter_product_name">أدخل اسم الصنف</string>
    <string name="add">إضافة</string>
    <string name="product_detail">تفاصيل الصنف</string>
    <string name="single_price">سعر الوحدة :</string>
    <string name="description">الوصف</string>
    <string name="zero">0</string>
    <string name="num_of_boxes">عدد الوحدات</string>
    <string name="buy">شراء</string>
    <string name="arrange_by">ترتيب حسب</string>
    <string name="most_price">الأكثر تكلفة</string>
    <string name="lowest_price">الأقل تكلفة</string>
    <string name="oldest">الأقدم</string>
    <string name="no_description">ليس هناك في قاموس اللغة كلمات تصف هذا المنتج</string>
    <string name="newest">الأحدث</string>
    <string name="sales_sum">مجموع تكاليف الشراء الخاصة بك</string>
    <string name="app_sound">تفعيل أصوات التطبيق</string>
</resources>