<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        />

    <View
        android:id="@+id/custom_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horz"
        android:background="@drawable/sitting_recycler_background"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/all_sales_tv_total_sales"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/custom_view"
        app:layout_constraintBottom_toBottomOf="@id/custom_view"
        app:layout_constraintRight_toRightOf="@id/custom_view"
        app:layout_constraintLeft_toLeftOf="@id/custom_view"
        app:layout_constraintHorizontal_bias="0.05"
        android:background="@drawable/sitting_img_background"
        android:text="@string/total_price"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:fontFamily="@font/my_font_bold"
        android:textColor="@color/app_orange"
        android:gravity="center_vertical|center"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/all_sales_tv_sale_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/custom_view"
        app:layout_constraintRight_toRightOf="@id/custom_view"
        android:layout_marginTop="5dp"
        android:layout_marginRight="25dp"
        android:text="@string/product_name"
        android:textSize="18sp"
        android:fontFamily="@font/my_font_bold"
        android:textColor="@color/my_white"/>

    <TextView
        android:id="@+id/all_sales_tv_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/all_sales_tv_sale_name"
        app:layout_constraintRight_toRightOf="@id/all_sales_tv_sale_name"
        app:layout_constraintBottom_toBottomOf="@id/custom_view"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/date_and_time"
        android:textSize="13sp"
        android:fontFamily="@font/my_font_bold"
        android:textColor="@color/my_white"/>

</androidx.constraintlayout.widget.ConstraintLayout>