<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_accountActivity"
    android:background="@drawable/splash_background"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horz_0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horz_0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>


    <ImageButton
        android:id="@+id/create_account_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/sitting_img_background"
        android:padding="15dp"
        android:src="@drawable/ic_man"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horz_0.2"
        android:scaleType="fitCenter"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/create_account_img"
        app:layout_constraintBottom_toBottomOf="@id/create_account_img"
        android:src="@drawable/ic_pencil"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horz_0.2"
        app:layout_constraintBottom_toTopOf="@id/guideline_horz_0.8"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/sign_in_edittext_background"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/create_account_et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_your_fullname"
            android:fontFamily="@font/app_font_medium"
            android:gravity="center_vertical|right"
            android:textColor="@color/my_black"
            android:textColorHint="@color/my_lightblack2"
            android:background="@drawable/sign_in_edittext_background"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:inputType="textPersonName"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/create_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/create_account_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_your_email"
            android:fontFamily="@font/app_font_medium"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical|right"
            android:textColor="@color/my_black"
            android:textColorHint="@color/my_lightblack2"
            android:background="@drawable/sign_in_edittext_background"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingRight="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/create_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/create_account_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_your_username"
            android:fontFamily="@font/app_font_medium"
            android:gravity="center_vertical|right"
            android:textColor="@color/my_black"
            android:textColorHint="@color/my_lightblack2"
            android:background="@drawable/sign_in_edittext_background"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:inputType="text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/create_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <LinearLayout
            android:id="@+id/liner_passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/create_account_et_rePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/enter_your_repassword"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="@drawable/create_view_background"
                />
            <EditText
                android:id="@+id/create_account_et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/enter_your_passowrd"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingRight="20dp"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/create_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <LinearLayout
            android:id="@+id/liner_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/create_account_et_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/enter_your_title"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                tools:ignore="NestedWeights" />
            <View
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:background="@drawable/create_view_background"
                />
            <EditText
                android:id="@+id/create_account_et_country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/enter_your_country"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingRight="20dp"
                android:inputType="text"
                />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/create_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/your_barthday"
            android:fontFamily="@font/app_font_medium"
            android:gravity="center"
            android:textColor="@color/my_black"
            android:textColorHint="@color/my_lightblack2"
            android:background="@drawable/sign_in_edittext_background"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            >
            <Spinner
                android:id="@+id/create_account_sp_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="8sp"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                tools:ignore="RtlCompat" />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@drawable/create_view_background"
                />
            <Spinner
                android:id="@+id/create_account_sp_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="12sp"
                android:textStyle="bold"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@drawable/create_view_background"
                />
            <Spinner
                android:id="@+id/create_account_sp_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/app_font_medium"
                android:gravity="center_vertical|right"
                android:textColor="@color/my_black"
                android:textColorHint="@color/my_lightblack2"
                android:background="@drawable/sign_in_edittext_background"
                android:textSize="8sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/create_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/create_account_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_your_phone"
            android:fontFamily="@font/app_font_medium"
            android:gravity="center_vertical|right"
            android:textColor="@color/my_black"
            android:textColorHint="@color/my_lightblack2"
            android:background="@drawable/sign_in_edittext_background"
            android:textSize="12sp"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:inputType="phone"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/sign_in_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/create_account_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/my_black"
                android:fontFamily="@font/app_font_medium"/>
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="@drawable/create_view_background"
                />
            <RadioButton
                android:id="@+id/create_account_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/my_black"
                android:fontFamily="@font/app_font_medium"
                />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/sign_in_view_background"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <CheckBox
            android:id="@+id/create_account_cb_isAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="left|center"
            android:text="@string/isAnAdministrator"
            android:textColor="@color/my_black"
            android:fontFamily="@font/app_font_medium"
            android:layout_marginRight="20dp"
            android:paddingLeft="15dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/create_account_btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline_horz_0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_sign_inback"
        android:text="@string/create_account"
        android:textColor="@color/my_white"
        android:textSize="18sp"
        android:fontFamily="@font/app_font_medium"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/ic_button"
        android:drawableTint="@color/my_white"
        android:drawablePadding="5dp"
        app:layout_constraintVertical_bias="0.35"
        />




</androidx.constraintlayout.widget.ConstraintLayout>