<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNew_ItemActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horz_0.75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        />

    <View
        android:id="@+id/add_newItem_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horz"
        android:background="@drawable/main_view_background"
        />


    <TextView
        android:id="@+id/add_newItem_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/add_newItem_view"
        app:layout_constraintTop_toBottomOf="@id/add_newItem_titleImg"
        app:layout_constraintRight_toRightOf="@id/add_newItem_view"
        app:layout_constraintBottom_toBottomOf="@id/add_newItem_view"
        android:text="@string/add_new_Item"
        android:textSize="20sp"
        android:fontFamily="@font/my_font_bold"
        android:textColor="@color/my_white"
        />

    <ImageView
        android:id="@+id/add_newItem_titleImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/add_newItem_Title"
        app:layout_constraintTop_toTopOf="@id/add_newItem_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_big_add"
        app:tint="@color/my_white"
        android:layout_marginTop="25dp"
        />

    <LinearLayout
        android:id="@+id/add_newItem_view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_horz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horz_0.75"
        android:background="@drawable/sitting_recycler_background"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/add_newItem_btn_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sitting_img_background"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_cloche" />

        <EditText
            android:id="@+id/add_newItem_et_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_name"
            android:background="@drawable/main_edittext_background"
            android:paddingRight="15dp"
            android:fontFamily="@font/app_font_medium"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:lines="1"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical|right"
            android:textSize="12dp"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/add_newItem_et_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price"
            android:background="@drawable/main_edittext_background"
            android:paddingRight="15dp"
            android:fontFamily="@font/app_font_medium"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:lines="1"
            android:inputType="numberDecimal"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical|right"
            android:textSize="12dp"
            android:layout_weight="1"
            />
        <EditText
            android:id="@+id/add_newItem_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_description"
            android:background="@drawable/main_edittext_background"
            android:paddingRight="15dp"
            android:fontFamily="@font/app_font_medium"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="12dp"
            android:lines="3"
            android:inputType="text"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:layout_marginBottom="5dp"
            />

        <RadioGroup
            android:id="@+id/add_newItem_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/add_newItem_radio_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/my_black"
                android:fontFamily="@font/app_font_medium"
                android:background="@drawable/sitting_img_background"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                />
            <RadioButton
                android:id="@+id/add_newItem_radio_installment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/installments"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/my_black"
                android:fontFamily="@font/app_font_medium"
                android:background="@drawable/sitting_img_background"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/add_newItem_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_go_home"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_go_home"
        android:background="@drawable/btn_sign_inback"
        android:text="@string/add"
        android:textColor="@color/my_white"
        android:textSize="18dp"
        android:fontFamily="@font/app_font_medium"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:drawableLeft="@drawable/ic_button"
        android:drawableTint="@color/my_white"
        android:drawablePadding="15dp"
        app:layout_constraintVertical_bias="0.35"
        />

    <ImageButton
        android:id="@+id/btn_go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horz_0.75"
        android:src="@drawable/ic_home"
        android:tint="@color/my_white"
        android:background="@drawable/btn_go_home_background"
        android:padding="15dp"
        android:layout_margin="20dp"
        tools:ignore="UseAppTint" />

</androidx.constraintlayout.widget.ConstraintLayout>